Fixing blocker bug 108198. Make setAttribute('value') change .value until .value is set by JS or user. Patch by John Keiser <jkeiser@iname.com>, r/sr=hyatt@netscape.com, jst@netscape.com